# sprintsync

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  estimates.csv  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2154ba0f3935_initial_tables.py  4ba6947e4712_initial_tables.py
app/: main.py
app/core/: config.py  logging_middleware.py  metrics.py  security.py
app/db/: session.py
app/models/: task.py  user.py
app/routers/: ai.py  auth.py  metrics.py  stats.py  tasks.py
app/schemas/: task.py  user.py
app/services/: ai_service.py  embedding_service.py
tests/: conftest.py  test_ai.py  test_auth.py  test_tasks.py
