[project]
name = "sprintsync"
version = "0.1.0"
description = "SprintSync MVP backend for CodeStratLabs challenge"
authors = [
    {name = "Dilavar Afreed",email = "dilavar4598@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
